--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,15 @@ jobs:
           curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
 
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        env:
+          DOCKER_USERNAME: ${{ env.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ env.DOCKER_PASSWORD }}
+        with:
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
+
       - name: Build and push Docker image using Docker Compose
         env:
           DOCKER_USERNAME: ${{ env.DOCKER_USERNAME }}
@@ -32,5 +41,4 @@ jobs:
           IMAGE_NAME: ${{ env.IMAGE_NAME }}
         run: |
           docker-compose build
-          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
           docker-compose push
