--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Set up Docker Compose
-        run: |
-          sudo rm /usr/local/bin/docker-compose
-          curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
+      # - name: Set up Docker Compose
+      #   run: |
+      #     sudo rm /usr/local/bin/docker-compose
+      #     curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+      #     sudo chmod +x /usr/local/bin/docker-compose
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -32,11 +32,11 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image using Docker Compose
+      - name: Build and push Docker image
+        id: docker_build
+        uses: docker/build-push-action@v2
         env:
-          DOCKER_USERNAME: ${{ env.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ env.DOCKER_PASSWORD }}
           IMAGE_NAME: ${{ env.IMAGE_NAME }}
-        run: |
-          docker-compose build
-          docker-compose push
+        with:
+          push: false
+          tags: ${{ env.IMAGE_NAME }}:latests
