--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,4 +39,4 @@ jobs:
           IMAGE_NAME: ${{ env.IMAGE_NAME }}
         with:
           push: false
-          tags: ${{ env.IMAGE_NAME }}:latests
+          tags: ${{ env.IMAGE_NAME }}:latest
