--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           repository: ${{ secrets.IMAGE_NAME }}
+          short-description: A Python script example for Docker Hub with github actions
+          readme-filepath: ./OVERVIEW_DOCKER_HUB.md
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
